@@ -302,18 +302,9 @@ bse_error_blurb (BseErrorType error_value)
     case BSE_ERROR_DEVICE_IO:			return "Device I/O error";
     case BSE_ERROR_DEVICE_GET_CAPS:		return "Failed to query device capabilities";
     case BSE_ERROR_DEVICE_SET_CAPS:		return "Failed to set device capabilities";
-    case BSE_ERROR_STREAM_PERM:			return "Stream permissions insufficient";
-    case BSE_ERROR_STREAM_ASYNC:		return "Stream not async capable";
-    case BSE_ERROR_STREAM_DEVICE_BUSY:		return "Stream device busy";
-    case BSE_ERROR_STREAM_READ_DENIED:		return "Stream read access denied";
-    case BSE_ERROR_STREAM_READ_FAILED:		return "Filed to read from stream";
-    case BSE_ERROR_STREAM_WRITE_DENIED:		return "Stream write access denied";
-    case BSE_ERROR_STREAM_WRITE_FAILED:		return "Writing to stream failed";
-    case BSE_ERROR_STREAM_IO:			return "Stream I/O error";
-    case BSE_ERROR_STREAM_GET_FORMATS:		return "Failed to query stream formats";
-    case BSE_ERROR_STREAM_SET_FORMAT:		return "Failed to set stream format";
     case BSE_ERROR_SOURCE_NO_SUCH_ICHANNEL:	return "No such input channel";
     case BSE_ERROR_SOURCE_NO_SUCH_OCHANNEL:	return "No such output channel";
+    case BSE_ERROR_SOURCE_BAD_LOOPBACK:		return "Bad loopback";
     case BSE_ERROR_SOURCE_ICHANNEL_IN_USE:	return "Input channel already in use";
     case BSE_ERROR_SOURCE_TOO_MANY_ITRACKS:	return "Too many input tracks required";
     case BSE_ERROR_SOURCE_TOO_MANY_OTRACKS:	return "Too many output tracks supplied";
