@@ -117,17 +117,6 @@ typedef enum
   BSE_ERROR_DEVICE_IO,
   BSE_ERROR_DEVICE_GET_CAPS,
   BSE_ERROR_DEVICE_SET_CAPS,
-  /* BseStream errors */
-  BSE_ERROR_STREAM_PERM,
-  BSE_ERROR_STREAM_ASYNC,
-  BSE_ERROR_STREAM_DEVICE_BUSY,
-  BSE_ERROR_STREAM_READ_DENIED,
-  BSE_ERROR_STREAM_READ_FAILED,
-  BSE_ERROR_STREAM_WRITE_DENIED,
-  BSE_ERROR_STREAM_WRITE_FAILED,
-  BSE_ERROR_STREAM_IO,
-  BSE_ERROR_STREAM_GET_FORMATS,
-  BSE_ERROR_STREAM_SET_FORMAT,
   /* Date parsing errors */
   BSE_ERROR_DATE_INVALID,
   BSE_ERROR_DATE_CLUTTERED,
@@ -141,6 +130,7 @@ typedef enum
   /* BseSource errors */
   BSE_ERROR_SOURCE_NO_SUCH_ICHANNEL,
   BSE_ERROR_SOURCE_NO_SUCH_OCHANNEL,
+  BSE_ERROR_SOURCE_BAD_LOOPBACK,
   BSE_ERROR_SOURCE_ICHANNEL_IN_USE,
   BSE_ERROR_SOURCE_TOO_MANY_ITRACKS,
   BSE_ERROR_SOURCE_TOO_MANY_OTRACKS,
